Fixed text overlapping in search views + unified class naming in css elements

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -18,12 +18,12 @@ html, body {
     padding: 0 !important;
 }
 
-#list_view {
+#listview {
     padding: 0px;
     margin: 0px;
 }
 
-#map_canvas {
+#map-canvas {
     padding: 0px;
     margin: 0px;
     text-align: center;
@@ -36,18 +36,18 @@ html, body {
     padding-bottom: 0px;
 }
 
-.list_right {
+.list-right {
     min-width: 50%;
 }
 
-.searchview_list {
+.searchview-list {
     list-style: none;
     border: none;
     margin: 0px;
     padding: 0px;
 }
 
-.list_header {
+.list-header {
     width: 100%;
     height: 35px;
     line-height: 35px;
@@ -55,7 +55,7 @@ html, body {
     border: none;
 }
 
-.list_item {
+.list-item {
     width: 100%;
     background-color: grey;
     height: 50px;
@@ -66,15 +66,20 @@ html, body {
     padding: 0px;
 }
 
-.list_name { 
+.list-name { 
     float: left;
-    width: 34%;
+    width: 60%;
     text-indent: 15px;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -webkit-text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
-.searchview_list a.list_button, .searchview_list a.list_button:visited {
+.searchview-list a.list-button, .searchview-list a.list-button:visited {
     float: left;
-    width: 33%;
+    width: 20%;
     text-align: center;
     height: 100%;
     line-height: 50px;
@@ -84,9 +89,7 @@ html, body {
     text-decoration: none;
 }
 
-
-
-.searchview_list a.list_button:hover {
+.searchview-list a.list-button:hover {
     background:             #dfdfdf ;
     font-weight: bold;
     color:                  #000;
@@ -99,7 +102,7 @@ html, body {
     background-image:         linear-gradient( #f6f6f6 , #e0e0e0 );
 }
 
-.icon_up {
+.icon-up {
     width: 18px;
     height: 18px;
     display: block;
@@ -109,7 +112,7 @@ html, body {
     margin-top: 16px;
 }
 
-.icon_down {
+.icon-down {
     width: 18px;
     height: 18px;
     display: block;
